# orca_tools

./: .gitignore  README.md  __init__.py  cube_utils.py  cubin.py  orca_molecule.py  pyproject.toml  requirements-optional.txt  requirements.txt  vib_tools.py
quorca/: README.md  quorca.py
src/orca_tools/: __init__.py  cube_utils.py  cubin.py  gaussian_parser.py  orca_molecule.py  orca_parser.py  orca_utils.py  utils.py  vib_tools.py  xyz_parser.py
templates/: README.md
templates/diphenalenyl/: IETS.py  README.md  input.xyz
templates/phenalenyl/: IETS.py  README.md  input.xyz
