[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "orca_tools"
version = "0.1.2"
authors = [
  { name="Nils Krane", email="nils.krane@empa.ch" },
]
description = "Python package for parsing and analyzing of ORCA DFT calculations."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
	"numpy"
]
default-optional-dependency-keys = [
	"recommended"
]

[project.optional-dependencies]
recommended = [
	"scipy",
	"ujson"
]
